--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@types/react-dom": "^18.2.7",
     "axios": "^1.4.0",
     "install": "^0.13.0",
+    "jwt-decode": "^3.1.2",
     "npm": "^9.8.1",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.7",
     "redux": "^4.2.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
